Began defining Notes View and setting up the data binding

--- a/Notation/View/NotesWindow.xaml
+++ b/Notation/View/NotesWindow.xaml
@@ -26,8 +26,30 @@
                           Click="MenuItem_Click"/>
             </MenuItem>
         </Menu>
-        <Grid>
-            
-        </Grid>
+        <ListView DockPanel.Dock="Left"
+                  Width="140"
+                  ItemsSource="{Binding Notebooks}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <ListView DockPanel.Dock="Left"
+                  Width="140"
+                  ItemsSource="{Binding Notes}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Title}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <ToolBarTray DockPanel.Dock="Top">
+            <ToolBar>
+                <Button Content="Speech" 
+                        Click="SpeechButton_Click"/>
+            </ToolBar>
+        </ToolBarTray>
+        <Grid></Grid>
     </DockPanel>
 </Window>
